--- a/kadai3-4.html
+++ b/kadai3-4.html
@@ -21,9 +21,10 @@
             // 商品一覧の表示関数
             function showItemList() {
                 console.log("商品は以下の" + items.length + "種類です。");
-
-                // 配列の内容を項目毎に出力
-                // ここにコードを書く
+                 for (let syouhin in items) {
+                    console.log("商品番号：" + items[syouhin].id + "，商品名：" + items[syouhin].name +
+                     "，金額：" + items[syouhin].price + "，在庫数：" + items[syouhin].stock);
+                }
                 console.log(""); // 空行の出力
             }
 
