--- a/kadai3-4.html
+++ b/kadai3-4.html
@@ -31,6 +31,25 @@
             // 商品購入の関数
             function buyItem(no) {
                 // ここにコードを書く
+                let syouhin = 0;
+                for (let i = 0; i < items.length; i++) {
+                    if (items[i].id == no) {
+                    syouhin = items[i];
+                    break; 
+                    }
+                }
+                if ( no < 9 && no > 0){
+                    console.log("商品番号：" + no + "，商品名：" + syouhin.name + "を購入します。")
+                    if ( syouhin.stock > 0){
+                        syouhin.stock --
+                    }
+                    else{
+                        console.log("在庫がありません。")
+                    }
+               }
+               else{
+                console.log( no + "は無効な商品番号です。番号は1～8で指定してください。")
+               }
                 showItemList(); // 商品一覧の表示関数呼び出し
             }
 
